# larder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml  rustfmt.yml
examples/: label.rs
migrations/2025-09-12-222153-0000_create_items/: down.sql  up.sql
migrations/2025-09-14-140813-0000_create_aliases/: up.sql
migrations/2025-09-16-202829-0000_create_stock/: down.sql  up.sql
src/: db.rs  gui.rs  keyinput.rs  labels.rs  lib.rs  main.rs  models.rs  niimbot.rs  schema.rs
typst/: label.typ
