[package]
name = "larder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
datamatrix = "0.3.2"
diesel = { version = "2.3.2", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
evdev = "0.13.2"
openfoodfacts = { git = "https://github.com/openfoodfacts/openfoodfacts-rust.git", version = "0.1.0" }
reqwest = { version = "0.12.24", features = ["blocking"] }
resvg = "0.45.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3.15.1"
termios = "0.3.3"
text_io = "0.1.13"
textwrap = "0.16.2"
xkbcommon = { version = "0.9.0", default-features = false }
