[package]
name = "larder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
brother_ql = { version = "2.1.1", features = ["usb", "serde"] }
chrono = "0.4.42"
datamatrix = "0.3.2"
derive_typst_intoval = "0.6.0"
diesel = { version = "2.3.3", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
evdev = "0.13.2"
image = { version = "0.25.9", default-features = false, features = ["png"] }
openfoodfacts = { git = "https://github.com/openfoodfacts/openfoodfacts-rust.git", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3.15.1"
termios = "0.3.3"
text_io = "0.1.13"
typst = { version = "0.14.2", default-features = false }
typst-kit = { version = "0.14.2", features = ["embed-fonts"], default-features = false }
typst-render = { version = "0.14.2", default-features = false }
xkbcommon = { version = "0.9.0", default-features = false }
